Move Alias Parser